(Hopefully) fixed issue on iPhone where page wouldn't load

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 	transition-property: background-color, color;
 	will-change: background-color, color;
-	transition-duration: 0.2s;
+	transition-duration: 0.1s;
 	transition-timing-function: linear;
 }
 
